--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# .gitignore
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,django,vuejs,python,venv,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,django,vuejs,python,venv,visualstudiocode
