--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-allauth==0.46.0
 django-extensions==3.1.3
 django-seed==0.3.1
 djangorestframework==3.12.4
+djangorestframework-jwt==1.11.0
 Faker==9.3.1
 idna==3.3
 ipython==7.28.0
@@ -24,8 +25,9 @@ prompt-toolkit==3.0.20
 psycopg2==2.9.1
 pycparser==2.21
 Pygments==2.10.0
-PyJWT==2.3.0
+PyJWT==1.7.1
 python-dateutil==2.8.2
+python-decouple==3.5
 python3-openid==3.2.0
 pytz==2021.3
 requests==2.26.0
